Fix the webpage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 	<head><title>ICS for calendar chaos</title></head>
 	<body>
-		<a href="./mycowork.ics">Calendar</a><br/>
+		<a href="./timezone.ics">Calendar</a><br/>
 
 		Idea inspired from <a href="https://nitter.net/webchick/status/1502840604597755908#m">this tweet</a>
+		<br>
 		Code for the page on <a href="https://github.com/mscherer/dst_calendar">this git repo</a>
 	</body>
 </html>
